
<resources>
    <string name="app_name">TodoApp</string>
    <string name="item_title_req">Title <font color='#FF0000'>*</font></string>
    <string name="item_description_req">Description <font color='#FF0000'>*</font></string>
    <string name="item_status_req">Status <font color='#FF0000'>*</font></string>
    <string name="item_category_req">Completed <font color='#FF0000'>*</font></string>
    <string name="item_duration_req">Duration <font color='#FF0000'>*</font></string>




    <string name="sell">Sell</string>
    <string name="quantity">Quantity in Stock:</string>
    <string name="quantity_req">Quantity in Stock <font color='#FF0000'>*</font></string>

    <string name="item_name_req">Item Name <font color='#FF0000'>*</font></string>
    <string name="item_price_req">Item Price <font color='#FF0000'>*</font></string>
    <string name="save_action">Save</string>
    <string name="item_detail_fragment_title">Item Details</string>
    <string name="add_fragment_title">Add Item</string>
    <string name="edit_fragment_title">Edit Item</string>
    <string name="price">Price</string>
    <string name="quantity_in_stock">Quantity\nIn Stock</string>
    <string name="item">Item</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="currency_symbol">$</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_new_item">Add new item</string>
</resources>